# weather

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/weather_mod/: mod.rs  open_weather.rs  settings.rs  weather_api.rs  weather_provider.rs  weather_provider_impl.rs
