[package]
name = "weather"
version = "0.1.0"
edition = "2021"
author = "Valerii Reutov"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.1.12", features = ["derive"] }
config = "0.13.1"
futures = "0.3.21"
ipgeolocate = "0.3.5"
lazy_static = "1.4.0"
public-ip = "0.2.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
