[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.1.12", features = ["derive"] }
directories = "4.0"
lazy_static = "1.4.0"
pickledb = "0.5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
